# SwarAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/voice-worker/: Dockerfile  README.md  pyproject.toml
apps/voice-worker/src/swarai_agent/: __init__.py  __main__.py  main.py
apps/voice-worker/src/swarsales_agent/: __init__.py  __main__.py  main.py  test_agent.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: agent-prompt.ts  ai-analysis.test.ts  ai-analysis.ts  context-learning.ts  crm-sync.ts  elevenlabs-voice.ts  google-calendar-service.ts  knowledge-pinecone.ts  knowledge-search.ts  legal-draft-templates.ts  livekit-sip-dial.ts  livekit.ts  org-quota.ts  (+18 more)
docker/: docker-compose.yml
screenshots/: README.md
scripts/: capture-readme-screenshots.mjs  ensure-redis.sh
supabase/: SETUP.md  apply_all_migrations_one_shot.sql  config.toml  seed.sql  verify_schema.sql
supabase/migrations/: 20260510120000_swarai_schema.sql  20260510120000_swarsales_schema.sql  20260510210000_voice_clones_bucket.sql  20260510220000_rag_whatsapp.sql  20260510240000_razorpay_webhook_events.sql  20260510250000_payu_transactions.sql  20260511000000_sales_templates.sql  20260511010000_customer_memory.sql  20260511020000_analytics.sql  20260511030000_scorecards.sql  20260511040000_battle_cards.sql
(+86 files in other folders)
