[project]
name = "swarsales-voice-worker"
version = "0.1.0"
description = "SwarSales AI LiveKit agent worker (Sarvam default)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "livekit-agents[codecs]>=1.0",
  "livekit-plugins-sarvam>=1.0",
  "livekit-plugins-silero>=1.0",
  "livekit-plugins-openai>=1.0",
  "livekit-plugins-deepgram>=1.0",
  "livekit-plugins-elevenlabs>=1.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.scripts]
swarsales-agent = "swarsales_agent.main:run_cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
